fix: #114 Enable keep alive thread for BlockSync